// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots referral/ReferaAndEarn Default 1`] = `
<div>
  <div>
    <div>
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 eVRrsx Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Textweb__Text-sc-6jf9e4-0 eCqkoo"
          color="shade.980"
          data-testid="ds-text"
        >
          Refer & earn Rs.5L worth of transaction credits
        </div>
        <div
          class="Textweb__Text-sc-6jf9e4-0 gDGEzE Spaceweb__Space-njatzl-0 hmPAok"
          color="shade.970"
          data-testid="ds-text"
        >
          Refer your friends who needs online payments and earn Rs.50,000 transaction Credits for every referral 
          <a
            class="Textweb__Text-sc-6jf9e4-0 Linkweb__StyledText-sc-1u7mgfj-0 bEnuyy"
            color="shade.980"
            data-testid="ds-text"
            target="_self"
          >
            More Details
          </a>
        </div>
      </div>
    </div>
    <div
      id="layerHost"
    />
  </div>
  <div
    id="layerHost"
  />
</div>
`;

exports[`Storyshots referral/ReferaAndEarn Home Page Referral Done 1`] = `
<div>
  <div>
    <div>
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 dyblWC Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Textweb__Text-sc-6jf9e4-0 eCqkoo"
          color="shade.980"
          data-testid="ds-text"
        >
          Refer 5 businesses and earn extra ₹2,50,000 bonus credits
        </div>
      </div>
    </div>
    <div
      id="layerHost"
    />
  </div>
  <div
    id="layerHost"
  />
</div>
`;

exports[`Storyshots referral/ReferaAndEarn Refer Section 1`] = `
<div>
  <div>
    <div>
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Sizeweb__Size-sc-10bl685-0 dyblWC Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Textweb__Text-sc-6jf9e4-0 eCqkoo"
          color="shade.980"
          data-testid="ds-text"
        >
          Refer and earn Rs.50,000 transaction Credits for every referral
        </div>
        <div
          class="Textweb__Text-sc-6jf9e4-0 gDGEzE Spaceweb__Space-njatzl-0 hmPAok"
          color="shade.970"
          data-testid="ds-text"
        >
          Know a business who needs to setup online payments? You will both receive ₹50,000 transaction credits.
          <a
            class="Textweb__Text-sc-6jf9e4-0 Linkweb__StyledText-sc-1u7mgfj-0 bEnuyy"
            color="shade.980"
            data-testid="ds-text"
            target="_self"
          >
            Terms apply
          </a>
        </div>
      </div>
    </div>
    <div
      id="layerHost"
    />
  </div>
  <div
    id="layerHost"
  />
</div>
`;
